--- a/src/app/modules/sandbox/effective/players/writePlayer.html
+++ b/src/app/modules/sandbox/effective/players/writePlayer.html
@@ -341,7 +341,7 @@
                             </button>
                         </div>
                         <div class="col s4">
-                            <button wz-next class="btn white-text green darken-1 col s12"
+                            <button wz-next class="btn white-text colorSecondary col s12"
                                     ng-disabled="playerCaracterSection.$invalid">{{'commons.buttons.validate' |
                                 translate }}
                             </button>
