--- a/src/app/index.css
+++ b/src/app/index.css
@@ -34,7 +34,7 @@
 }
 
 .colorMain {
-    background: linear-gradient(10deg, rgba(100, 100, 100, 0.7), rgba(100, 100, 100, 0.7));
+    background: linear-gradient(10deg, rgba(100, 100, 100, 1), rgba(100, 100, 100, 1));
     overflow: hidden;
 }
 
@@ -62,6 +62,39 @@
 .btn, .btn-large, .btn-flat {
     height: 24px;
     line-height: 24px;
+}
+
+input:not([type]):focus:not([readonly]) + label,
+input[type=text]:focus:not([readonly]) + label,
+input[type=password]:focus:not([readonly]) + label,
+input[type=email]:focus:not([readonly]) + label,
+input[type=url]:focus:not([readonly]) + label,
+input[type=time]:focus:not([readonly]) + label,
+input[type=date]:focus:not([readonly]) + label,
+input[type=datetime]:focus:not([readonly]) + label,
+input[type=datetime-local]:focus:not([readonly]) + label,
+input[type=tel]:focus:not([readonly]) + label,
+input[type=number]:focus:not([readonly]) + label,
+input[type=search]:focus:not([readonly]) + label,
+textarea.materialize-textarea:focus:not([readonly]) + label {
+  color: rgba(120, 190, 120, 1);
+}
+
+input:not([type]):focus:not([readonly]),
+input[type=text]:focus:not([readonly]),
+input[type=password]:focus:not([readonly]),
+input[type=email]:focus:not([readonly]),
+input[type=url]:focus:not([readonly]),
+input[type=time]:focus:not([readonly]),
+input[type=date]:focus:not([readonly]),
+input[type=datetime]:focus:not([readonly]),
+input[type=datetime-local]:focus:not([readonly]),
+input[type=tel]:focus:not([readonly]),
+input[type=number]:focus:not([readonly]),
+input[type=search]:focus:not([readonly]),
+textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #78BE78;
+  box-shadow: 0 1px 0 0 #78BE78;
 }
 
 input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid,
@@ -220,7 +253,7 @@ footer.page-footer {
     z-index: 10;
 }
 
-.hero h1.title, .lost h1.title {
+.hero h1.title, .lost h1.title, .hero-pricing h1.title, .hero-signup h1.title {
     text-transform: uppercase;
     font-weight: bold;
 }
@@ -385,10 +418,6 @@ h6.title {
 
     .hero a.btn {
         margin-bottom: 10px;
-    }
-
-    .container {
-        width: 100%;
     }
 }
 
