--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,9 +1,11 @@
 <div id="index-banner" class="colorMain-text">
     <div class="section no-pad-bot hero">
         <div class="colorBckgModal white-text center-align">
-            <h1 class="title" translate="landing.main-title"></h1>
-
-            <h4 class="title" translate="landing.sub-title"></h4>
+            <h1 class="title hide-on-small-only" translate="landing.main-title"></h1>
+            <h4 class="title hide-on-small-only" translate="landing.sub-title"></h4>
+            
+            <h2 class="title hide-on-med-and-up" translate="landing.main-title"></h2>
+            <h5 class="title hide-on-med-and-up" translate="landing.sub-title"></h5>
 
             <!-- <a class="waves-effect waves-light btn" translate="landing.manual-btn" href="#/how"></a>-->
         </div>
@@ -42,9 +44,6 @@
                     <p class="light left-align small" translate="landing.area-3.item-2.content"></p>
                 </div>
             </div>
-
-
-            <div class="s12 hide-on-large-only hide-on-small-only">&nbsp;</div>
 
             <div class="col s12 m6 l3">
                 <div class="center">
