--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -104,12 +104,12 @@
 
                 <div class="col s12 m6">
                     <div class="center icon-block">
-                        <a href="#" class="modal-trigger">
+                        <a href="#/about" class="modal-trigger">
                             <div class="colorAccent-text">
                                 <i class="medium material-icons">feedback</i>
                             </div>
                         </a>
-                        <h5 class="center" translate="landing.contact.newsletter">/h5>
+                        <h5 class="center" translate="landing.contact.about"></h5>
                     </div>
                 </div>
             </div>
