Simplification création compte

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -158,7 +158,7 @@
 </div>
 <!-- Finalize signup -->
 <div class="navbar-fixed" ng-if="user && user.account.firstConnexion">
-    <nav class="top-nav light-green lighten-1 visible-nav" role="navigation">
+    <nav class="top-nav top-nav-trans visible-nav" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
                 <a href="/#/" class="hide-on-med-and-down brand-logo"><img src="assets/images/logo-mini.png"
