--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -15,7 +15,7 @@
             <div class="col s12 m4">
                 <div class="card white colorMain-text">
                     <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator"   src="../../../assets/images/404-bg.jpg">
+                        <img class="activator card-image"   src="../../../assets/images/Christophe.jpg">
                         <span class="card-title center-align"><h3>Christophe</h3></span>
                     </div>
                     <div class="card-content colorAccent white-text center-align">
@@ -32,7 +32,7 @@
             <div class="col s12 m4">
                 <div class="card white colorMain-text">
                     <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator"   src="../../../assets/images/404-bg.jpg">
+                        <img class="activator card-image"   src="../../../assets/images/Pascal.JPG">
                         <span class="card-title center-align"><h3>Pascal</h3></span>
                     </div>
                     <div class="card-content colorSecondary white-text center-align">
@@ -49,7 +49,7 @@
             <div class="col s12 m4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator"   src="../../../assets/images/404-bg.jpg">
+                        <img class="activator card-image"  src="../../../assets/images/Xavier.png">
                         <span class="card-title center-align"><h3>Xavier</h3></span>
                     </div>
                     <div class="card-content white colorSecondary-text center-align">
@@ -66,7 +66,7 @@
             <div class="col s12 m4">
                 <div class="card white colorMain-text">
                     <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator"   src="../../../assets/images/404-bg.jpg">
+                        <img class="activator card-image"   src="../../../assets/images/404-bg.jpg">
                         <span class="card-title center-align"><h3>Florent</h3></span>
                     </div>
                     <div class="card-content colorSecondary white-text center-align">
@@ -83,7 +83,7 @@
              <div class="col s12 m4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator"   src="../../../assets/images/404-bg.jpg">
+                        <img class="activator card-image"   src="../../../assets/images/mathieu.jpg">
                         <span class="card-title center-align"><h3>Mathieu</h3></span>
                     </div>
                     <div class="card-content white colorAccent-text center-align">
@@ -100,7 +100,7 @@
             <div class="col s12 m4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light center-align">
-                        <img class="activator"   src="../../../assets/images/404-bg.jpg">
+                        <img class="activator card-image"   src="../../../assets/images/Jerome%20-%20copie.jpg">
                         <span class="card-title center-align"><h3>Jérôme</h3></span>
                     </div>
                     <div class="card-content colorAccent white-text center-align">
