--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -1,10 +1,8 @@
 <!-- START PRICING TABLE CONTAINER -->
 <div class="colorMain-text">
-    <div class="section no-pad-bot hero-pricing">
-        <div class="colorBckgModal white-text center-align">
-            <h1 class="title" translate="pricing.title"></h1>
-            <h4 class="title" translate="pricing.desc" style="margin-bottom: 50px"></h4>
-        </div>
+    <div class="section no-pad-bot hero-pricing colorAccent-text center-align">
+        <h1 class="title" translate="pricing.title"></h1>
+        <h4 class="title" translate="pricing.desc" style="margin-bottom: 50px"></h4>
     </div>
 </div>
 <div class="pricing colorSecondary white-text">
