--- a/src/app/modules/commons/users/signup/signupStart.html
+++ b/src/app/modules/commons/users/signup/signupStart.html
@@ -1,19 +1,18 @@
 <div class="colorMain-text">
-    <div class="hero-signup ">
-        <div class="colorBckgModal white-text center-align">
+    <div class="hero-signup colorAccent-text center-align">
+        
             <h1 class="title hide-on-small-only" translate="landing.main-title"></h1>
             <h4 class="title hide-on-small-only" translate="landing.sub-title"></h4>
             
             <h2 class="title hide-on-med-and-up" translate="landing.main-title"></h2>
             <h5 class="title hide-on-med-and-up" translate="landing.sub-title"></h5>
 
-        </div>
     </div>
 
     <!-- Entete -->
     <div class="row">
         <div class="col s12 colorSecondary white-text center">
-            <h3 translate="headerSignup.label"></h3>
+            <h4 translate="headerSignup.label"></h4>
         </div>
     </div>
 
