--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,14 +1,12 @@
 <div id="index-banner" class="colorMain-text">
-    <div class="section no-pad-bot hero">
-        <div class="colorBckgModal white-text center-align">
+    <div class="section no-pad-bot hero white-text center-align">
+        
             <h1 class="title hide-on-small-only" translate="landing.main-title"></h1>
             <h4 class="title hide-on-small-only" translate="landing.sub-title"></h4>
             
             <h2 class="title hide-on-med-and-up" translate="landing.main-title"></h2>
             <h5 class="title hide-on-med-and-up" translate="landing.sub-title"></h5>
 
-            <!-- <a class="waves-effect waves-light btn" translate="landing.manual-btn" href="#/how"></a>-->
-        </div>
     </div>
 
 
