--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -1,8 +1,8 @@
 <!-- START PRICING TABLE CONTAINER -->
 <div class="colorMain-text">
-    <div class="section no-pad-bot hero-pricing colorAccent-text center-align">
-        <h1 class="title" translate="pricing.title"></h1>
-        <h4 class="title" translate="pricing.desc" style="margin-bottom: 50px"></h4>
+    <div class="section no-pad-bot hero-pricing white-text center-align">
+        <h2 class="title" translate="pricing.title"></h2>
+        <h5 class="title hide-on-small-only" translate="pricing.desc"></h5>
     </div>
 </div>
 <div class="pricing colorSecondary white-text">
@@ -17,6 +17,7 @@
                        href="#/signupStart" translate="pricing.trial.btn"></a>
                 </div>
             </div>
+            <div class="col s12">&nbsp;</div>
         </div>
     </div>
 </div>
@@ -28,7 +29,7 @@
             <div class="col s12">
                 <div class="">
                     <div class="card-title colorAccent-text">
-                        <h3><b translate="pricing.offers.standard.title"></b></h3>
+                        <h3 translate="pricing.offers.standard.title"></h3>
                     </div>
                     <div class="card-content colorMain white-text">
                         <div class="price center-align white-text">
