--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,49 +1,43 @@
 <div id="index-banner" class="colorMain-text">
     <div class="section no-pad-bot hero white-text center-align">
         
-            <h1 class="title hide-on-small-only" translate="landing.main-title"></h1>
-            <h4 class="title hide-on-small-only" translate="landing.sub-title"></h4>
-            
-            <h2 class="title hide-on-med-and-up" translate="landing.main-title"></h2>
-            <h5 class="title hide-on-med-and-up" translate="landing.sub-title"></h5>
+            <h2 class="title" translate="landing.main-title"></h2>
+            <h5 class="title hide-on-small-only" translate="landing.sub-title"></h5>
 
     </div>
-
-
     
     <div class="container">
         <div class="section">
-            <h4 class="center-align" translate="landing.area-2.title"></h4>
-
-            <h5 class="center-align" translate="landing.area-2.content"></h5>
+            <h4 class="center-align colorAccent-text" translate="landing.area-2.title"></h4>
+            <h5 class="center-align hide-on-small-only" translate="landing.area-2.content"></h5>
         </div>
     </div>
 
-    <div class="container">
-        <div class="section row describe">
-            <div class="col s12 m6 l3">
+    <div class=" colorBckgModal colorMain-text">
+        <div class="section row describe container">
+            <div class="col s12 m6">
                 <div class="center">
                     <div class="colorAccent-text">
                         <i class="material-icons large">assessment</i>
                     </div>
                     <h5 translate="landing.area-3.item-1.title" class="title"></h5>
 
-                    <p class="light left-align small" translate="landing.area-3.item-1.content"></p>
+                    <p class="light left-align container" translate="landing.area-3.item-1.content"></p>
                 </div>
             </div>
 
-            <div class="col s12 m6 l3">
+            <div class="col s12 m6">
                 <div class="center">
                     <div class="colorAccent-text">
                         <i class="large material-icons">store</i>
                     </div>
                     <h5 translate="landing.area-3.item-2.title" class="title"></h5>
 
-                    <p class="light left-align small" translate="landing.area-3.item-2.content"></p>
+                    <p class="light left-align container" translate="landing.area-3.item-2.content"></p>
                 </div>
             </div>
 
-            <div class="col s12 m6 l3">
+            <div class="col s12 m6">
                 <div class="center">
                     <div class="colorAccent-text">
                         <i class="large material-icons">stay_current_landscape</i>
@@ -51,18 +45,18 @@
 
                     <h5 translate="landing.area-3.item-0.title" class="title"></h5>
 
-                    <p class="light left-align small" translate="landing.area-3.item-0.content"></p>
+                    <p class="light left-align container" translate="landing.area-3.item-0.content"></p>
                 </div>
             </div>
 
-            <div class="col s12 m6 l3">
+            <div class="col s12 m6">
                 <div class="center">
                     <div class="colorAccent-text">
                         <i class="large material-icons">loop</i>
                     </div>
                     <h5 translate="landing.area-3.item-3.title" class="title"></h5>
 
-                    <p class="light left-align small" translate="landing.area-3.item-3.content"></p>
+                    <p class="light left-align container" translate="landing.area-3.item-3.content"></p>
                 </div>
             </div>
         </div>
@@ -70,16 +64,18 @@
     
     <div class="colorSecondary">
         <div class="section white-text">
-            <h4 class="center-align" translate="landing.area-4.title"></h4>
+            
 
             <h5 class="center-align" translate="landing.area-4.content"></h5>
 
             <div class="row">
+                <!-- 
                 <span class="col m2 hide-on-small-only">&nbsp;</span>
                 <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
-                <span class="col m2 hide-on-small-only">&nbsp;</span>
-                <img class="col m3 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
-                <span class="col m2 hide-on-small-only">&nbsp;</span>
+                -->
+                <span class="col m5 hide-on-small-only">&nbsp;</span>
+                <img class="col m2 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
+                <span class="col m5 hide-on-small-only">&nbsp;</span>
             </div>
         </div>
     </div>
